<resources>
    <string name="app_name">Csd</string>
    <string name="vstrecha">Vstrecha</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password">пароль</string>
    <string name="forget_pass_ru"> <u>Забыли пароль?</u></string>
    <string name="enter_ru">Войти</string>
    <string name="registration_ru">Регистрация</string>
    <string name="google_enter_ru">Войти через Google</string>
    <string name="email_ru">Электронная почта</string>
    <string name="second_name_ru">Фамилия</string>
    <string name="name_ru">Имя</string>
    <string name="password_ru">Пароль</string>
    <string name="password_duplicate_ru">Повторите пароль</string>
    <string name="to_register_ru">Зарегистрироваться</string>
    <string name="registration_success">Успех!</string>
    <string name="request_error">Ошибка!</string>
    <string name="input_error">Ошибка ввода данных</string>
    <string name="auth_error_default_msg">Введены неверные данные</string>
    <string name="new_event">+</string>
    <string name="calendar">calendar</string>
    <string name="location">location</string>
    <string name="settings">settings</string>
    <string name="monday">Monday</string>
    <string name="_01_01_2020">01.01.2020</string>
    <string name="_11_00_12_00">11.00 - 12.00</string>
    <string name="do_job">Do job</string>
    <string name="name">Название</string>
    <string name="date">Дата</string>
    <string name="_22_11_20">22.11.2020</string>
    <string name="start_time">Время начала:</string>
    <string name="_11_20">11:20</string>
    <string name="end_time">Время конца:</string>
    <string name="_14_20">14:20</string>
    <string name="vaznost">Важность:</string>
    <string name="low">низкая</string>
    <string name="middle">средняя</string>
    <string name="hight">высокая</string>
    <string name="opisanie">Описание</string>
    <string name="povtor">Повтор</string>
    <string name="pn">пн</string>
    <string name="vt">вт</string>
    <string name="sr">ср</string>
    <string name="cht">чт</string>
    <string name="pt">пт</string>
    <string name="sb">сб</string>
    <string name="vs">вс</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="left"><![CDATA[<<<<<<<<<<]]></string>
    <string name="right"><![CDATA[>>>>>>>>>>]]></string>
    <string name="connection_error">Упс, ошибка подключения</string>
    <string name="data_error">Упс, неверная дата</string>
    <string name="data_format_error">Упс, данные в неверном формате</string>
    <string name="event_error">Упс, не можем получить данные</string>
    <string name="date_error">Формат даты dd.mm.yyyy. Формат времени hh:mm</string>
    <string name="date1_error">Формат даты dd.mm.yyyy</string>
    <string name="date2_error">Дата начала больше даты конца</string>
    <string name="import_error">Важность должна быть установлена</string>
    <string name="d2020_12_23">2020-12-23</string>
    <string name="day_from">Выбрать день с</string>
    <string name="to">по</string>
    <string name="find">Найти</string>
    <string name="list_visitors">Список участников</string>
    <string name="_00">00</string>
    <string name="_10_10_1010_11_11_1111">10.10.1010 - 11.11.1111</string>
    <string name="december">Декабрь</string>
    <string name="meet_sbm">Пригласить</string>
    <string name="Leave">Покинуть</string>
    <string name="abvgd">code</string>
    <string name="vved_kod">Введите уникальный код встречи:</string>
    <string name="join">Присоединиться</string>
    <string name="people">Участники</string>

</resources>