<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="18">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:gravity="center"
        android:text="@string/vstrecha"
        android:textColor="@color/text_color"
        android:textSize="70sp" />

    <TextView
        android:id="@+id/reg_error_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="@color/error_color"
        />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/email_ru"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/reg_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/second_name_ru"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/reg_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/name_ru"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/password_ru"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/reg_pass_duplicate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/password_duplicate_ru"
        android:inputType="textPassword"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/reg_register_btn"
        style="@style/Vstrecha_Text_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_weight="2"
        android:text="@string/to_register_ru" />




</LinearLayout>