<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >
    <TextView
        android:id="@+id/new_meet_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/error_color"
        android:layout_weight="1"
        android:gravity="center"
        android:text=""/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:text=""/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20dp"
        android:gravity="center"
        android:text="@string/vved_kod"/>

    <EditText
        android:id="@+id/meet_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/abvgd"
        android:gravity="center_horizontal"
        android:inputType="text"
        />



    <Button
        android:id="@+id/add_meet_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/join"
        android:textStyle="bold"
        android:backgroundTint="@color/text_color"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/create_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:backgroundTint="@color/text_color"
            android:textColor="@color/white"
            android:text="@string/create"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:backgroundTint="@color/event_color"
            android:text="@string/find"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>